--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     body{
       min-height:100vh;width:100%;
       display:flex;justify-content:center;align-items:center;
-      font-family:'Playfair Display','Georgia',serif;
+      font-family:-apple-system,BlinkMacSystemFont,'SF Pro Display','SF Pro Text',Helvetica,Arial,sans-serif;
       background:linear-gradient(180deg,#fde6ee,#fff6e8);
       overflow:hidden;
     }
@@ -172,25 +172,22 @@
     body.show-celebrate .celebrate{opacity:1;pointer-events:auto}
     
     .celebrate h1{
-      font-family:'Playfair Display','Georgia',serif;
-      font-size:44px;
-      font-weight:600;
-      letter-spacing:.5px;
-      color:#e75480;
-      margin-bottom:10px;
+      font-family:-apple-system,BlinkMacSystemFont,'SF Pro Display','SF Pro Text',Helvetica,Arial,sans-serif;
+      font-size:36px;
+      font-weight:700;
+      letter-spacing:-0.4px;
+      color:#1c1c1e;
+      margin-bottom:6px;
       z-index:21;
-      text-shadow:0 6px 18px rgba(231,84,128,.25);
     }
 
     .celebrate p{
-      font-family:'Playfair Display','Georgia',serif;
-      font-size:22px;
+      font-family:-apple-system,BlinkMacSystemFont,'SF Pro Display','SF Pro Text',Helvetica,Arial,sans-serif;
+      font-size:18px;
       font-weight:500;
-      color:#c2185b;
-      opacity:.9;
-      margin-bottom:24px;
-      z-index:21;
-      letter-spacing:.3px;
+      color:#3a3a3c;
+      margin-bottom:22px;
+      letter-spacing:-0.2px;
     }
 
     .celebrate-img{
@@ -227,7 +224,7 @@
     <div class="paper">
       <div class="badge">For Juls 💖</div>
       <h1>Hey Juls</h1>
-      <img class="valentine-img" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnRuOGhid3dpeW5pbjEwanV2OWx6amppMjB0Ynh2c2c2MTg3NGp6MCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/MDJ9IbxxvDUQM/giphy.gif" alt="Valentine" />
+      <img class="valentine-img" src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExbDB2cTQ4d3E1MGZvdnczbGQzaWlreWg5OGlwem94OGtsc2N2MjV5MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/13ByqbM0hgfN7y/giphy.gif" alt="Valentine" />
       <p>Will you be my Valentine? 💗</p>
       <div class="button-container">
         <button class="yes" id="yesBtn">Yes 💗</button>
@@ -237,9 +234,9 @@
   </div>
 
   <div class="celebrate">
-    <h1>She said yes 💖</h1>
+    <h1>She said YES! 💖</h1>
     <p>Happy Valentine Day Juls</p>
-    <img class="celebrate-img" src="https://media2.giphy.com/media/v1.Y2lkPTc5MGI3NjExbDB2cTQ4d3E1MGZvdnczbGQzaWlreWg5OGlwem94OGtsc2N2MjV5MSZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/13ByqbM0hgfN7y/giphy.gif" alt="Celebration GIF" />
+    <img class="celebrate-img" src="https://media3.giphy.com/media/v1.Y2lkPTc5MGI3NjExNnRuOGhid3dpeW5pbjEwanV2OWx6amppMjB0Ynh2c2c2MTg3NGp6MCZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/MDJ9IbxxvDUQM/giphy.gif" alt="Celebration GIF" />
     <div class="emoji-rain" id="emojiRain"></div>
   </div>
 
